--- a/xss/production/test/animtest.html
+++ b/xss/production/test/animtest.html
@@ -47,6 +47,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/img1.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
