--- a/xss/production/test/ms5.html
+++ b/xss/production/test/ms5.html
@@ -39,144 +39,174 @@ var SoundUtils = new ui.SoundUtils();
         {
             return a + (b - a)*t;
         }		
-		var streamer = new stream.Streamer();	
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
-            {
+		{
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/progress.full.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image1;
 				global_package.events.addListener("loaded", function()
 				{
 					__image1 = streamer.get_resource("__image1");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/progress.empty.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image2;
 				global_package.events.addListener("loaded", function()
 				{
 					__image2 = streamer.get_resource("__image2");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image3",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/smile_grin_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image3;
 				global_package.events.addListener("loaded", function()
 				{
 					__image3 = streamer.get_resource("__image3");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image4",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/smile_sad_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image4;
 				global_package.events.addListener("loaded", function()
 				{
 					__image4 = streamer.get_resource("__image4");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image5",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_left.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image5;
 				global_package.events.addListener("loaded", function()
 				{
 					__image5 = streamer.get_resource("__image5");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image6",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_right.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image6;
 				global_package.events.addListener("loaded", function()
 				{
 					__image6 = streamer.get_resource("__image6");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image7",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_right_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image7;
 				global_package.events.addListener("loaded", function()
 				{
 					__image7 = streamer.get_resource("__image7");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image8",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_right_green_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image8;
 				global_package.events.addListener("loaded", function()
 				{
 					__image8 = streamer.get_resource("__image8");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image9",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_left_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image9;
 				global_package.events.addListener("loaded", function()
 				{
 					__image9 = streamer.get_resource("__image9");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image10",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_left_green_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image10;
 				global_package.events.addListener("loaded", function()
 				{
