--- a/xss/production/test/wgl_flamingo.html
+++ b/xss/production/test/wgl_flamingo.html
@@ -51,6 +51,7 @@ application.events = new ev.EventHolder();
 		id:				"model_1",
 		resource_type:	RESOURCE_JSON_MODEL,
 		src:			"model/flamingo/flamingo.js",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
