--- a/xss/production/test/g_anim.html
+++ b/xss/production/test/g_anim.html
@@ -44,7 +44,7 @@ application.events = new ev.EventHolder();
         {
             return a + (b - a)*t;
         }		
-		var streamer = new stream.Streamer();	
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
 		if(drawingCanvas){
 			var client =
@@ -61,14 +61,17 @@ application.events = new ev.EventHolder();
 	// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
-            {
+		{
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/test1.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image1;
 				global_package.events.addListener("loaded", function()
 				{
@@ -237,7 +240,7 @@ camera_1.manager = manager;
             img4.set_y(100);
             img4.set_width(128);
             img4.set_height(164);
-            camera_1.position = ;
+            camera_1.position.z = 1000;
 if(ui_)
 {	
 	SoundUtils = new ui.SoundUtils();		
