--- a/xss/production/test/jquery_pp.html
+++ b/xss/production/test/jquery_pp.html
@@ -301,19 +301,23 @@ var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
 scene.mouse_thru = true;
-var streamer;
+var streamer = {};
 var manager = new threejs.Manager(scene, renderer, null, canvas_position);
 var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
+manager.events.parent = manager;
+manager.c_anims = [];
+manager.js_anims = [];
+manager.c_skins = [];
 var app_width = canvasElement.width;
 var app_height = canvasElement.height;
 var application = {};
 var clock = new THREE.Clock();
 application.events = new ev.EventHolder();
-		var streamer = new stream.Streamer();	
-		streamer.manager = manager;
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
-	// --------RESOURCES---------
+	streamer.manager = manager;
+// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
 				var model_pack = new stream.Package(streamer);				
 	model_pack.events.addListener("loaded", function()
@@ -326,34 +330,43 @@ application.events = new ev.EventHolder();
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "model_pack")
+				{		
 					global_package.items[i].children['res_model'] = child_;
-			}
+				}					
+			}	
 			var child_ = {};
 			child_.type_ = 'image';
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "model_pack")
+				{		
 					global_package.items[i].children['__image1'] = child_;
-			}
+				}					
+			}	
 			var child_ = {};
 			child_.type_ = 'image';
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "model_pack")
+				{		
 					global_package.items[i].children['__image2'] = child_;
-			}
+				}					
+			}	
 			var child_ = {};
 			child_.type_ = 'image';
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "model_pack")
+				{		
 					global_package.items[i].children['__image3'] = child_;
-			}
+				}					
+			}	
                 model_pack.add_item(
 		{
 		id:				"res_model",
 		resource_type:	RESOURCE_JSON_MODEL,
 		src:			"model/leeperrysmith/LeePerrySmith.js",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -370,6 +383,7 @@ application.events = new ev.EventHolder();
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"model/leeperrysmith/Infinite-Level_02_Tangent_SmoothUV.jpg",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -386,6 +400,7 @@ application.events = new ev.EventHolder();
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"model/leeperrysmith/Map-COL.jpg",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -402,6 +417,7 @@ application.events = new ev.EventHolder();
 		id:				"__image3",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"model/leeperrysmith/Map-SPEC.jpg",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -433,6 +449,8 @@ if (g_elapsed < 0)
 else
 	g_delta  = now - g_elapsed;  
 g_elapsed = now; 
+if(!g_delta) g_delta = 0;
+manager.delta = g_delta;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
