--- a/xss/production/test/ui_audio.html
+++ b/xss/production/test/ui_audio.html
@@ -21,7 +21,7 @@ var app_width = 600;
 var app_height = 400;
 application.events = new ev.EventHolder();
 var SoundUtils = new ui.SoundUtils();
-		var streamer = new stream.Streamer();	
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
 		if(drawingCanvas){
 			var client =
@@ -37,196 +37,238 @@ var SoundUtils = new ui.SoundUtils();
 		}		
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
-            {
+		{
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/progress.full.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image1;
 				global_package.events.addListener("loaded", function()
 				{
 					__image1 = streamer.get_resource("__image1");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/progress.empty.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image2;
 				global_package.events.addListener("loaded", function()
 				{
 					__image2 = streamer.get_resource("__image2");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image3",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/play.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image3;
 				global_package.events.addListener("loaded", function()
 				{
 					__image3 = streamer.get_resource("__image3");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image4",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/stop.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image4;
 				global_package.events.addListener("loaded", function()
 				{
 					__image4 = streamer.get_resource("__image4");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image5",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/pause.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image5;
 				global_package.events.addListener("loaded", function()
 				{
 					__image5 = streamer.get_resource("__image5");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image6",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/play_over.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image6;
 				global_package.events.addListener("loaded", function()
 				{
 					__image6 = streamer.get_resource("__image6");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image7",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/stop_over.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image7;
 				global_package.events.addListener("loaded", function()
 				{
 					__image7 = streamer.get_resource("__image7");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image8",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/pause_over.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image8;
 				global_package.events.addListener("loaded", function()
 				{
 					__image8 = streamer.get_resource("__image8");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image9",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_left.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image9;
 				global_package.events.addListener("loaded", function()
 				{
 					__image9 = streamer.get_resource("__image9");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image10",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_right.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image10;
 				global_package.events.addListener("loaded", function()
 				{
 					__image10 = streamer.get_resource("__image10");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image11",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/sound_2.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image11;
 				global_package.events.addListener("loaded", function()
 				{
 					__image11 = streamer.get_resource("__image11");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__image12",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/sound_1.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image12;
 				global_package.events.addListener("loaded", function()
 				{
 					__image12 = streamer.get_resource("__image12");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__audio1",
 		resource_type:	RESOURCE_AUDIO,
 		src:			"sounds/applauselong.wav",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __audio1;
 				global_package.events.addListener("loaded", function()
 				{
 					__audio1 = streamer.get_resource("__audio1");
 				});
                 global_package.add_item(
-            {
+		{
 		id:				"__audio2",
 		resource_type:	RESOURCE_AUDIO,
 		src:			"sounds/forest.wav",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __audio2;
 				global_package.events.addListener("loaded", function()
 				{
