--- a/xss/production/test/ui_kitchen_sink.html
+++ b/xss/production/test/ui_kitchen_sink.html
@@ -41,6 +41,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/progress.full.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -57,6 +58,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/progress.empty.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -73,6 +75,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image3",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/smile_grin_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -89,6 +92,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image4",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/smile_sad_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -105,6 +109,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image5",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_left.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -121,6 +126,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image6",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_right.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -137,6 +143,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image7",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_right_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -153,6 +160,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image8",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_right_green_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -169,6 +177,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image9",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_left_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -185,6 +194,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"__image10",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/arrow_left_green_48.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -201,6 +211,7 @@ var SoundUtils = new ui.SoundUtils();
 		id:				"monster_sheet",
 		resource_type:	RESOURCE_SPRITE,
 		src:			"images/monster.png",
+		runtime_src:	null,
 		frame_width:	64,
 		frame_height:	64,
 		animations:		[],	
