--- a/xss/production/test/wgl_cube_img.html
+++ b/xss/production/test/wgl_cube_img.html
@@ -26,25 +26,30 @@ var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
 scene.mouse_thru = true;
-var streamer;
+var streamer = {};
 var manager = new threejs.Manager(scene, renderer, null, canvas_position);
 var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
+manager.events.parent = manager;
+manager.c_anims = [];
+manager.js_anims = [];
+manager.c_skins = [];
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
 var clock = new THREE.Clock();
 application.events = new ev.EventHolder();
-		var streamer = new stream.Streamer();	
-		streamer.manager = manager;
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
-	// --------RESOURCES---------
+	streamer.manager = manager;
+// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
 		{
 		id:				"image_1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/test1.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -61,6 +66,7 @@ application.events = new ev.EventHolder();
 		id:				"image_2",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/test2.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -77,6 +83,7 @@ application.events = new ev.EventHolder();
 		id:				"image_3",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/test3.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -93,6 +100,7 @@ application.events = new ev.EventHolder();
 		id:				"image_4",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/test4.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -109,6 +117,7 @@ application.events = new ev.EventHolder();
 		id:				"image_5",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/test5.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -125,6 +134,7 @@ application.events = new ev.EventHolder();
 		id:				"image_6",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/test6.png",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -141,6 +151,7 @@ application.events = new ev.EventHolder();
 		id:				"__audio1",
 		resource_type:	RESOURCE_AUDIO,
 		src:			"sounds/forest.wav",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -172,6 +183,8 @@ if (g_elapsed < 0)
 else
 	g_delta  = now - g_elapsed;  
 g_elapsed = now; 
+if(!g_delta) g_delta = 0;
+manager.delta = g_delta;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
