--- a/xss/production/test/wgl_postprocessing.html
+++ b/xss/production/test/wgl_postprocessing.html
@@ -37,25 +37,30 @@ var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
 scene.mouse_thru = true;
-var streamer;
+var streamer = {};
 var manager = new threejs.Manager(scene, renderer, null, canvas_position);
 var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
+manager.events.parent = manager;
+manager.c_anims = [];
+manager.js_anims = [];
+manager.c_skins = [];
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
 var clock = new THREE.Clock();
 application.events = new ev.EventHolder();
-		var streamer = new stream.Streamer();	
-		streamer.manager = manager;
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
-	// --------RESOURCES---------
+	streamer.manager = manager;
+// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
 		{
 		id:				"res_model",
 		resource_type:	RESOURCE_JSON_MODEL,
 		src:			"model/leeperrysmith/LeePerrySmith.js",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -72,6 +77,7 @@ application.events = new ev.EventHolder();
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"model/leeperrysmith/Infinite-Level_02_Tangent_SmoothUV.jpg",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -88,6 +94,7 @@ application.events = new ev.EventHolder();
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"model/leeperrysmith/Map-COL.jpg",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -104,6 +111,7 @@ application.events = new ev.EventHolder();
 		id:				"__image3",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"model/leeperrysmith/Map-SPEC.jpg",
+		runtime_src:	null,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -135,6 +143,8 @@ if (g_elapsed < 0)
 else
 	g_delta  = now - g_elapsed;  
 g_elapsed = now; 
+if(!g_delta) g_delta = 0;
+manager.delta = g_delta;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
